--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,11 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
-    <!-- JUnit for future tests -->
+    <!-- JUnit 5 (JUnit Jupiter) for tests -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
@@ -26,7 +27,8 @@
 
   <build>
     <plugins>
-      <!-- make it easy to run with `mvn exec:java` -->
+
+      <!-- exec plugin to run the app with mvn exec:java -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -36,7 +38,7 @@
         </configuration>
       </plugin>
 
-      <!-- compile / package settings (default is OK) -->
+      <!-- compiler plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -45,6 +47,33 @@
           <release>17</release>
         </configuration>
       </plugin>
+
+      <!-- make the produced jar executable via Main-Class manifest -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.4.2</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>Main</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+
+      <!-- Ensure Surefire runs JUnit 5 tests and produces reports -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <!-- Allow longer fork timeout for slow CI environments -->
+          <forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
+          <!-- Common JUnit 5 provider is automatically discovered by this version -->
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 </project>
